--- a/index.html
+++ b/index.html
@@ -1030,7 +1030,7 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-indent:182.7pt;line-height:
   normal;layout-grid-mode:char'><span class=SpellE><b><span lang=EN-US
   style='font-size:14.0pt;font-family:"Times New Roman",serif'>Fandi</span></b></span><b><span
-  lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'> Shi</span></b></p>
+  lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'> Shi---</span></b></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><span lang=EN-US style='font-size:10.0pt;
   font-family:"Times New Roman",serif'>&nbsp;&nbsp;&nbsp; </span><b><span
@@ -1139,9 +1139,9 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   style='font-size:8.0pt;font-family:Wingdings'>l</span><span lang=EN-US
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
   lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Explored
-  the influence of the channels&amp;#39</span> special structure on the
-  differentiation of embryonic stem cells(ESCs) into endothelial cells(ECs) by
-  laser scanning confocal microscopy</span></p>
+  the influence of the channels&amp;#39</span><span lang=EN-US> special
+  structure on the differentiation of embryonic stem cells(ESCs) into
+  endothelial cells(ECs) by laser scanning confocal microscopy</span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:7'>
@@ -1301,11 +1301,12 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
   class=SpellE><span lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Yuhan</span></span><span
   lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'> Zeng, <span
-  class=SpellE><b>Fandi</b></span><b> Shi</b>, etc. &amp;#34Stu<i>dy on the
-  Mechanical Principle of the Pods</i>&amp;#39</span><i> automatic Ejection
-  after Dehydration</i>&amp;#34 in Conference Paper Collection of 11th National
-  Biomechanical Academic Conference &amp; 13th National <span class=SpellE>Biorheology</span>
-  Academic Conference, 10/2015</span></p>
+  class=SpellE><b>Fandi</b></span><b> Shi</b>, etc. &amp;#34Stu<i>dy on the Mechanical
+  Principle of the Pods</i>&amp;#39</span><i><span lang=EN-US> automatic
+  Ejection after Dehydration</span></i><span lang=EN-US>&amp;#34 in Conference
+  Paper Collection of 11th National Biomechanical Academic Conference &amp;
+  13th National <span class=SpellE>Biorheology</span> Academic Conference,
+  10/2015</span></p>
   <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
   margin-left:28.05pt;margin-bottom:.0001pt;text-align:justify;text-justify:
   inter-ideograph;text-indent:-25.35pt;line-height:normal'><span lang=EN-US
@@ -1371,8 +1372,8 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   font-family:"Arial",sans-serif'>Equipment Procurer in </span></i></b><b><span
   lang=EN-US style='font-size:9.0pt;line-height:115%;font-family:"Arial",sans-serif'>Rehabilitation
   Dept. of People</span></b><span lang=EN-US style='font-size:9.0pt;line-height:
-  115%;font-family:"Arial",sans-serif'>&amp;#39</span><b>s Hospital, Yangyuan
-  Heibei</b></span></p>
+  115%;font-family:"Arial",sans-serif'>&amp;#39</span><b><span lang=EN-US>s
+  Hospital, Yangyuan Heibei</span></b></p>
   </td>
   <td width=202 colspan=2 valign=top style='width:151.3pt;border-top:none;
   border-left:none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
@@ -1392,8 +1393,8 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   EN-GB'>l</span><span lang=EN-GB style='font-size:7.0pt;mso-ansi-language:
   EN-GB'>&nbsp;&nbsp; </span><span lang=EN-GB style='font-size:9.0pt;
   font-family:"Arial",sans-serif;mso-ansi-language:EN-GB'>Selected equipment
-  for patients requiring rehabilitation; Learning about basic principles of occupational
-  therapy and guidelines of using rehabilitation equipment </span></p>
+  for patients requiring rehabilitation; Learning about basic principles of
+  occupational therapy and guidelines of using rehabilitation equipment </span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:18'>
