--- a/index.html
+++ b/index.html
@@ -1031,8 +1031,7 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   0cm;margin-left:0cm;margin-bottom:.0001pt;text-indent:182.7pt;line-height:
   normal;layout-grid-mode:char'><span class=SpellE><b><span lang=EN-US
   style='font-size:14.0pt;font-family:"Times New Roman",serif'>Fandi</span></b></span><b><span
-  lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'>
-  Shi---</span></b></p>
+  lang=EN-US style='font-size:14.0pt;font-family:"Times New Roman",serif'> Shi</span></b></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><span lang=EN-US style='font-size:10.0pt;
   font-family:"Times New Roman",serif'>&nbsp;&nbsp;&nbsp; </span><b><span
@@ -1123,18 +1122,16 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   style='font-size:8.0pt;font-family:Wingdings'>l</span><span lang=EN-US
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
   lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Evaluated
-  the structure of channel by <span style='color:#333333;background:white'>scanning
-  electron microscope</span><b>.</b></span></p>
+  the structure of channel by scanning electron microscope.<o:p></o:p></span></p>
   <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
   margin-left:28.05pt;margin-bottom:.0001pt;text-align:justify;text-justify:
   inter-ideograph;text-indent:-25.35pt;line-height:normal'><span lang=EN-US
   style='font-size:8.0pt;font-family:Wingdings'>l</span><span lang=EN-US
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
-  lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Explored
-  the influence of the </span><span lang=EN-US>special structure</span><span
-  lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'> of channels</span><span
-  lang=EN-US> on the differentiation of embryonic stem cells(ESCs) into
-  endothelial cells(ECs) by laser scanning confocal microscopy</span></p>
+  lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Explored the
+  influence of the channels&apos; special structure on the differentiation of
+  embryonic stem cells(ESCs) into endothelial cells(ECs) by laser scanning
+  confocal microscopy</span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:7'>
@@ -1272,11 +1269,12 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
   class=SpellE><span lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Yuhan</span></span><span
   lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'> Zeng, <span
-  class=SpellE><b>Fandi</b></span><b> Shi</b>, etc. ¡°Stu<i>dy on the Mechanical
-  Principle of the Pods</i>¡¯</span><i><span lang=EN-US> automatic Ejection
-  after Dehydration</span></i><span lang=EN-US>¡± in Conference Paper Collection
-  of 11th National Biomechanical Academic Conference &amp; 13th National <span
-  class=SpellE>Biorheology</span> Academic Conference, 10/2015</span></p>
+  class=SpellE><b>Fandi</b></span><b> Shi</b>, etc. &quot;<i style='mso-bidi-font-style:
+  normal'>Stu<span style='mso-bidi-font-style:italic'>dy on the Mechanical
+  Principle of the Pods</span></i>&apos;</span><i><span lang=EN-US> automatic
+  Ejection after Dehydration</span></i><span lang=EN-US>&quot; in Conference Paper
+  Collection of 11th National Biomechanical Academic Conference &amp; 13th
+  National <span class=SpellE>Biorheology</span> Academic Conference, 10/2015</span></p>
   <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
   margin-left:28.05pt;margin-bottom:.0001pt;text-align:justify;text-justify:
   inter-ideograph;text-indent:-25.35pt;line-height:normal'><span lang=EN-US
@@ -1284,8 +1282,8 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
   lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Hong Gao, <span
   class=SpellE>Shujian</span> Deng,<b> <span class=SpellE>Fandi</span> Shi</b>,
-  ¡°<i>Improvement on Ice Melting Heat-Based Apparatuses</i>¡± Physics <span
-  class=SpellE>Experimentatio</span>--04/2016</span></p>
+  &quot;<i>Improvement on Ice Melting Heat-Based Apparatuses</i>&quot; Physics
+  Experimentation-04/2016</span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:13;height:8.4pt'>
@@ -1336,7 +1334,7 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   font-family:"Arial",sans-serif'>Equipment Procurer in </span></i></b><b><span
   lang=EN-US style='font-size:9.0pt;line-height:115%;font-family:"Arial",sans-serif'>Rehabilitation
   Dept. of People</span></b><span lang=EN-US style='font-size:9.0pt;line-height:
-  115%;font-family:"Arial",sans-serif'>¡¯</span><b><span lang=EN-US>s Hospital, <span
+  115%;font-family:"Arial",sans-serif'>&apos</span><b><span lang=EN-US>s Hospital, <span
   class=SpellE>Yangyuan</span> <span class=SpellE>Heibei</span></span></b></p>
   </td>
   <td width=202 colspan=2 valign=top style='width:151.3pt;padding:0cm 5.4pt 0cm 5.4pt'>
@@ -1380,8 +1378,8 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   style='font-size:8.0pt;font-family:Wingdings'>l</span><span lang=EN-US
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
   lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Sponsored
-  symposiums of learning experience among students of different grades and
-  worked as <span class=GramE>an</span> chairman of several
+  symposiums of learning experience among students of different grades and worked
+  as <span class=GramE>an</span> chairman of several
   meetings.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </span></p>
   </td>
