--- a/index.html
+++ b/index.html
@@ -1041,15 +1041,17 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   </td>
  </tr>
  <tr style='mso-yfti-irow:1;height:4.95pt'>
-  <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt;
-  height:4.95pt'>
+  <td width=660 colspan=3 valign=top style='width:494.75pt;border:none;
+  border-bottom:solid windowtext 1.0pt;mso-border-bottom-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt;height:4.95pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><b><span lang=EN-US style='font-size:13.0pt;
   font-family:"Garamond",serif'>EDUCATION</span></b></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:2;height:13.15pt'>
-  <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt;
+  <td width=660 colspan=3 valign=top style='width:494.75pt;border:none;
+  mso-border-top-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt;
   height:13.15pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><span class=SpellE><b><span lang=EN-US
@@ -1063,9 +1065,9 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   lang=EN-US style='font-size:9.0pt;font-family:ËÎÌו'>)</span></b></p>
   </td>
  </tr>
- <tr style='mso-yfti-irow:3;height:62.8pt'>
+ <tr style='mso-yfti-irow:3;height:44.25pt'>
   <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt;
-  height:62.8pt'>
+  height:44.25pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><span lang=EN-US style='font-family:"Times New Roman",serif'>Bachelor
   of Engineering in Biomedical Engineering </span></p>
@@ -1075,23 +1077,25 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   </td>
  </tr>
  <tr style='mso-yfti-irow:4;height:21.9pt'>
-  <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt;
-  height:21.9pt'>
+  <td width=660 colspan=3 valign=top style='width:494.75pt;border:none;
+  border-bottom:solid windowtext 1.0pt;mso-border-bottom-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt;height:21.9pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><b><span lang=EN-US style='font-size:13.0pt;
   font-family:"Garamond",serif'>RESEARCH EXPERIENCES</span></b></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:5;height:13.75pt'>
-  <td width=519 colspan=2 valign=top style='width:389.45pt;padding:0cm 5.4pt 0cm 5.4pt;
+  <td width=519 colspan=2 valign=top style='width:389.45pt;border:none;
+  mso-border-top-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt;
   height:13.75pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;text-align:
   justify;text-justify:inter-ideograph;line-height:normal'><b><span lang=EN-US
   style='font-family:"Times New Roman",serif;color:black'>Preparation of
   aligned porous gelatin scaffolds | Research Assistant</span></b></p>
   </td>
-  <td width=140 valign=top style='width:105.3pt;padding:0cm 5.4pt 0cm 5.4pt;
-  height:13.75pt'>
+  <td width=140 valign=top style='width:105.3pt;border:none;mso-border-top-alt:
+  solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt;height:13.75pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;text-align:
   justify;text-justify:inter-ideograph;line-height:normal'><b><span lang=EN-US
   style='font-size:9.0pt;font-family:AdvGulliv-R;color:black'>Aug.2015-Present</span></b></p>
@@ -1102,9 +1106,9 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   height:70.6pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><i><span lang=EN-US style='font-size:10.5pt;
-  font-family:"Times New Roman",serif'>Dept. of Biomedical Engineering,<b>
-  Tsinghua University</b> ;</span></i><i><span lang=EN-US style='font-family:
-  "Times New Roman",serif'> </span></i></p>
+  font-family:"Times New Roman",serif'>Dept. of Biomedical Engineering,<b> Tsinghua
+  University</b> ;</span></i><i><span lang=EN-US style='font-family:"Times New Roman",serif'>
+  </span></i></p>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><i><span lang=EN-US style='font-size:10.5pt;
   font-family:"Times New Roman",serif'>Advisor: Prof. <span class=SpellE>Yanan</span>
@@ -1128,10 +1132,10 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   inter-ideograph;text-indent:-25.35pt;line-height:normal'><span lang=EN-US
   style='font-size:8.0pt;font-family:Wingdings'>l</span><span lang=EN-US
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
-  lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Explored the
-  influence of the channels&apos; special structure on the differentiation of
-  embryonic stem cells(ESCs) into endothelial cells(ECs) by laser scanning
-  confocal microscopy</span></p>
+  lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Explored
+  the influence of the channels&amp;apos; special structure on the
+  differentiation of embryonic stem cells(ESCs) into endothelial cells(ECs) by
+  laser scanning confocal microscopy</span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:7'>
@@ -1222,9 +1226,9 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   style='font-size:9.0pt;font-family:AdvGulliv-R;color:black'>Mar.2015-July.201</span></b></p>
   </td>
  </tr>
- <tr style='mso-yfti-irow:10;height:99.65pt'>
+ <tr style='mso-yfti-irow:10;height:76.6pt'>
   <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt;
-  height:99.65pt'>
+  height:76.6pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><i><span lang=EN-US style='font-size:10.5pt;
   font-family:"Times New Roman",serif'>Dept. of Physics, <span class=SpellE>Beihang</span>
@@ -1252,16 +1256,19 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   </td>
  </tr>
  <tr style='mso-yfti-irow:11'>
-  <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt'>
+  <td width=660 colspan=3 valign=top style='width:494.75pt;border:none;
+  border-bottom:solid windowtext 1.0pt;mso-border-bottom-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><a name="OLE_LINK1"></a><a name="OLE_LINK2"></a><span
   style='mso-bookmark:OLE_LINK1'><b><span lang=EN-US style='font-size:13.0pt;
   font-family:"Garamond",serif'>PUBLICATIONS </span></b></span></p>
   </td>
  </tr>
- <tr style='mso-yfti-irow:12;height:105.35pt'>
-  <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt;
-  height:105.35pt'>
+ <tr style='mso-yfti-irow:12;height:84.45pt'>
+  <td width=660 colspan=3 valign=top style='width:494.75pt;border:none;
+  mso-border-top-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt;
+  height:84.45pt'>
   <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
   margin-left:28.05pt;margin-bottom:.0001pt;text-align:justify;text-justify:
   inter-ideograph;text-indent:-25.35pt;line-height:normal'><span lang=EN-US
@@ -1271,10 +1278,11 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'> Zeng, <span
   class=SpellE><b>Fandi</b></span><b> Shi</b>, etc. &quot;<i style='mso-bidi-font-style:
   normal'>Stu<span style='mso-bidi-font-style:italic'>dy on the Mechanical
-  Principle of the Pods</span></i>&apos;</span><i><span lang=EN-US> automatic
-  Ejection after Dehydration</span></i><span lang=EN-US>&quot; in Conference Paper
-  Collection of 11th National Biomechanical Academic Conference &amp; 13th
-  National <span class=SpellE>Biorheology</span> Academic Conference, 10/2015</span></p>
+  Principle of the Pods</span></i>&amp;apos;</span><i><span lang=EN-US>
+  automatic Ejection after Dehydration</span></i><span lang=EN-US>&quot; in
+  Conference Paper Collection of 11th National Biomechanical Academic
+  Conference &amp; 13th National <span class=SpellE>Biorheology</span> Academic
+  Conference, 10/2015</span></p>
   <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
   margin-left:28.05pt;margin-bottom:.0001pt;text-align:justify;text-justify:
   inter-ideograph;text-indent:-25.35pt;line-height:normal'><span lang=EN-US
@@ -1287,16 +1295,18 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   </td>
  </tr>
  <tr style='mso-yfti-irow:13;height:8.4pt'>
-  <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt;
-  height:8.4pt'>
+  <td width=660 colspan=3 valign=top style='width:494.75pt;border:none;
+  border-bottom:solid windowtext 1.0pt;mso-border-bottom-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt;height:8.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><b><span lang=EN-US style='font-size:13.0pt;
   font-family:"Garamond",serif'>SKILLS</span></b></p>
   </td>
  </tr>
- <tr style='mso-yfti-irow:14;height:84.6pt'>
-  <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt;
-  height:84.6pt'>
+ <tr style='mso-yfti-irow:14;height:62.5pt'>
+  <td width=660 colspan=3 valign=top style='width:494.75pt;border:none;
+  mso-border-top-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt;
+  height:62.5pt'>
   <p class=MsoNormal style='margin-top:0cm;margin-right:0cm;margin-bottom:0cm;
   margin-left:28.05pt;margin-bottom:.0001pt;text-indent:-28.05pt;line-height:
   normal;layout-grid-mode:char'><span lang=EN-US style='font-size:8.0pt;
@@ -1321,23 +1331,28 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   </td>
  </tr>
  <tr style='mso-yfti-irow:15'>
-  <td width=660 colspan=3 valign=top style='width:494.75pt;padding:0cm 5.4pt 0cm 5.4pt'>
+  <td width=660 colspan=3 valign=top style='width:494.75pt;border:none;
+  border-bottom:solid windowtext 1.0pt;mso-border-bottom-alt:solid windowtext .5pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal;layout-grid-mode:char'><b><span lang=EN-US style='font-size:13.0pt;
   font-family:"Garamond",serif'>SOCIAL SERVICES &amp; ACTIVITIES</span></b></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:16'>
-  <td width=458 valign=top style='width:343.45pt;padding:0cm 5.4pt 0cm 5.4pt'>
+  <td width=458 valign=top style='width:343.45pt;border:none;mso-border-top-alt:
+  solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;layout-grid-mode:
   char'><b><i><span lang=EN-US style='font-size:9.0pt;line-height:115%;
   font-family:"Arial",sans-serif'>Equipment Procurer in </span></i></b><b><span
   lang=EN-US style='font-size:9.0pt;line-height:115%;font-family:"Arial",sans-serif'>Rehabilitation
-  Dept. of People</span></b><span lang=EN-US style='font-size:9.0pt;line-height:
-  115%;font-family:"Arial",sans-serif'>&apos</span><b><span lang=EN-US>s Hospital, <span
+  Dept. of <span class=SpellE>People<span style='font-weight:normal'>&amp;apos;</span><span
+  style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
+  mso-bidi-font-family:ËÎÌו'>s</span></span></span><span lang=EN-US> Hospital, <span
   class=SpellE>Yangyuan</span> <span class=SpellE>Heibei</span></span></b></p>
   </td>
-  <td width=202 colspan=2 valign=top style='width:151.3pt;padding:0cm 5.4pt 0cm 5.4pt'>
+  <td width=202 colspan=2 valign=top style='width:151.3pt;border:none;
+  mso-border-top-alt:solid windowtext .5pt;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;layout-grid-mode:
   char'><b><span lang=EN-US style='font-size:9.0pt;line-height:115%;font-family:
   "Times New Roman",serif'>July.2016-Aug.2016</span></b></p>
@@ -1351,8 +1366,8 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   EN-GB'>l</span><span lang=EN-GB style='font-size:7.0pt;mso-ansi-language:
   EN-GB'>&nbsp;&nbsp; </span><span lang=EN-GB style='font-size:9.0pt;
   font-family:"Arial",sans-serif;mso-ansi-language:EN-GB'>Selected equipment
-  for patients requiring rehabilitation; Learning about basic principles of occupational
-  therapy and guidelines of using rehabilitation equipment </span></p>
+  for patients requiring rehabilitation; Learning about basic principles of
+  occupational therapy and guidelines of using rehabilitation equipment </span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:18'>
@@ -1378,8 +1393,8 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   style='font-size:8.0pt;font-family:Wingdings'>l</span><span lang=EN-US
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
   lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Sponsored
-  symposiums of learning experience among students of different grades and worked
-  as <span class=GramE>an</span> chairman of several
+  symposiums of learning experience among students of different grades and
+  worked as <span class=GramE>an</span> chairman of several
   meetings.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
   </span></p>
   </td>
