--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   style='font-size:8.0pt;font-family:Wingdings'>l</span><span lang=EN-US
   style='font-size:7.0pt;font-family:"Times New Roman",serif'>&nbsp;&nbsp; </span><span
   lang=EN-US style='font-size:9.0pt;font-family:"Arial",sans-serif'>Explored
-  the influence of the channels&amp;apos; special structure on the
+  the influence of the special structure of channels on the
   differentiation of embryonic stem cells(ESCs) into endothelial cells(ECs) by
   laser scanning confocal microscopy</span></p>
   </td>
@@ -1346,9 +1346,7 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   char'><b><i><span lang=EN-US style='font-size:9.0pt;line-height:115%;
   font-family:"Arial",sans-serif'>Equipment Procurer in </span></i></b><b><span
   lang=EN-US style='font-size:9.0pt;line-height:115%;font-family:"Arial",sans-serif'>Rehabilitation
-  Dept. of <span class=SpellE>People<span style='font-weight:normal'>&amp;apos;</span><span
-  style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif;
-  mso-bidi-font-family:ËÎÌו'>s</span></span></span><span lang=EN-US> Hospital, <span
+  Dept. of <span class=SpellE>Peoples</span></span></span><span lang=EN-US> Hospital, <span
   class=SpellE>Yangyuan</span> <span class=SpellE>Heibei</span></span></b></p>
   </td>
   <td width=202 colspan=2 valign=top style='width:151.3pt;border:none;
