--- a/index.html
+++ b/index.html
@@ -1346,7 +1346,7 @@ lang=EN-US style='font-size:9.0pt;font-family:"Times New Roman",serif'>&nbsp;</s
   char'><b><i><span lang=EN-US style='font-size:9.0pt;line-height:115%;
   font-family:"Arial",sans-serif'>Equipment Procurer in </span></i></b><b><span
   lang=EN-US style='font-size:9.0pt;line-height:115%;font-family:"Arial",sans-serif'>Rehabilitation
-  Dept. of <span class=SpellE>Peoples</span></span></span><span lang=EN-US> Hospital, <span
+  Dept. of <span class=SpellE>People</span></span></span><span lang=EN-US> Hospital, <span
   class=SpellE>Yangyuan</span> <span class=SpellE>Heibei</span></span></b></p>
   </td>
   <td width=202 colspan=2 valign=top style='width:151.3pt;border:none;
